--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,3 @@
-[project]
-name = "sentinel"
-version = "0.1.0"
-description = "Project SENTINEL monorepo workspace"
-authors = [{ name = "Suryakanta Subudhi" }]
-requires-python = ">=3.11"
-dependencies = []
-
-[project.optional-dependencies]
-dev = [
-  "pytest>=8.3",
-  "ruff>=0.6",
-  "mypy>=1.10"
-]
-
-[build-system]
-requires = ["setuptools>=69", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [tool.uv.workspace]
 members = [
   "agents/supervisor",
@@ -24,6 +5,13 @@ members = [
   "services/orchestrator",
   "services/api",
   "shared/core"
+]
+
+[tool.uv]
+dev-dependencies = [
+  "pytest>=8.3",
+  "ruff>=0.6",
+  "mypy>=1.10"
 ]
 
 [tool.ruff]
